<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_casino"
    android:padding="24dp">

    <!-- SELECTOR DE IDIOMA ARRIBA -->
   <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:entries="@array/language_options"
        android:spinnerMode="dropdown" />

    <!-- CONTENIDO CENTRAL -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title_main"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#FFD700"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:backgroundTint="#FFD700"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="#FFFFFF"
            android:backgroundTint="#1B263B"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:backgroundTint="#6C757D" />

        <Button
            android:id="@+id/btnMusic"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/music_on"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</FrameLayout>